# njit-web-scratch

./: pyproject.toml
web1/web1/: settings.py  urls.py
