[tool.poetry]
name = "njit-web-scratch"
version = "0.1.0"
description = "njit web is 601"
authors = ["Shawn Cicoria <github@cicoria.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.0.6"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
flake8 = "^3.8.1"
pylint = "^2.5.2"
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
